// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frequencies renders CustomCron 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
  style="margin-top:5px"
>
  <div
    class="euiFlexItem"
    style="margin-top:0px"
  >
    <div
      class="euiFormRow"
      id="cronExpression-form-row-row"
      style="margin-top:0px"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          aria-invalid="false"
          class="euiFormLabel euiFormRow__label"
          for="cronExpression-form-row"
        >
          Run every
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <textarea
          class="euiTextArea euiTextArea--resizeVertical"
          data-test-subj="customCron_cronExpression_field"
          name="cronExpression"
          rows="6"
        >
          0 */1 * * *
        </textarea>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="cronExpression-form-row-help-0"
        >
          <div
            class="euiText euiText--small"
          >
            Use 
            <a
              class="euiLink euiLink--primary"
              href="https://docs-beta.opensearch.org/monitoring-plugins/alerting/"
              rel="noopener noreferrer"
              target="_blank"
            >
              cron expressions
              <svg
                aria-hidden="true"
                aria-label="External link"
                class="euiIcon euiIcon--small euiIcon-isLoading euiLink__externalIcon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              />
              <span
                class="euiScreenReaderOnly"
              >
                (opens in a new tab or window)
              </span>
            </a>
             for complex schedules
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem"
    style="margin-top:0px"
  >
    <div
      class="euiFormRow"
      id="timezone-form-row-row"
      style="margin-top:0px"
    >
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="euiComboBox"
          data-test-subj="timezoneComboBox"
          name="timezone"
          role="combobox"
        >
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <div
                class="euiComboBox__inputWrap euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isClearable"
                data-test-subj="comboBoxInput"
                tabindex="-1"
              >
                <p
                  class="euiComboBoxPlaceholder"
                >
                  Select a timezone
                </p>
                <div
                  class="euiComboBox__input"
                  style="font-size:14px;display:inline-block"
                >
                  <input
                    aria-controls=""
                    data-test-subj="comboBoxSearchInput"
                    id="timezone"
                    role="textbox"
                    style="box-sizing:content-box;width:1px"
                    value=""
                  />
                  <div
                    style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                  />
                </div>
              </div>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <button
                  aria-label="Open list of options"
                  class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                  data-test-subj="comboBoxToggleListButton"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.069 5.157L8.384 9.768a.546.546 0 01-.768 0L2.93 5.158a.552.552 0 00-.771 0 .53.53 0 000 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 000-.76.552.552 0 00-.771 0z"
                      fill-rule="non-zero"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Frequencies renders Frequency 1`] = `
<div
  class="euiFormRow"
  id="frequency-form-row-row"
>
  <div
    class="euiFormRow__labelWrapper"
  >
    <label
      aria-invalid="false"
      class="euiFormLabel euiFormRow__label"
      for="frequency-form-row"
    >
      Frequency
    </label>
  </div>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <select
          class="euiSelect"
          data-test-subj="frequency_field"
          id="frequency"
          name="frequency"
        >
          <option
            selected=""
            value="interval"
          >
            By interval
          </option>
          <option
            value="daily"
          >
            Daily
          </option>
          <option
            value="weekly"
          >
            Weekly
          </option>
          <option
            value="monthly"
          >
            Monthly
          </option>
          <option
            value="cronExpression"
          >
            Custom cron expression
          </option>
        </select>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Frequencies renders FrequencyPicker 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--responsive"
>
  <div
    class="euiFlexItem"
  >
    <div
      class="euiFormRow"
      id="period.interval-form-row-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          aria-invalid="false"
          class="euiFormLabel euiFormRow__label"
          for="period.interval-form-row"
        >
          Run every
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              class="euiFieldNumber euiFieldNumber--withIcon"
              data-test-subj="interval_interval_field"
              min="1"
              name="period.interval"
              type="number"
              value="1"
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.5 13A5.506 5.506 0 012 7.5C2 4.467 4.467 2 7.5 2S13 4.467 13 7.5 10.533 13 7.5 13m0-12a6.5 6.5 0 100 13 6.5 6.5 0 000-13m3 6H8V3.5a.5.5 0 00-1 0v4a.5.5 0 00.5.5h3a.5.5 0 000-1"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem"
  >
    <div
      class="euiFormRow euiFormRow--hasEmptyLabelSpace"
      id="period.unit-form-row-row"
    >
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <select
              class="euiSelect"
              data-test-subj="interval_unit_field"
              id="period.unit"
              name="period.unit"
            >
              <option
                selected=""
                value="MINUTES"
              >
                Minutes
              </option>
              <option
                value="HOURS"
              >
                Hours
              </option>
              <option
                value="DAYS"
              >
                Days
              </option>
            </select>
            <div
              class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.069 5.157L8.384 9.768a.546.546 0 01-.768 0L2.93 5.158a.552.552 0 00-.771 0 .53.53 0 000 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 000-.76.552.552 0 00-.771 0z"
                    fill-rule="non-zero"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Frequencies renders Interval 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--responsive"
>
  <div
    class="euiFlexItem"
  >
    <div
      class="euiFormRow"
      id="period.interval-form-row-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          aria-invalid="false"
          class="euiFormLabel euiFormRow__label"
          for="period.interval-form-row"
        >
          Run every
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              class="euiFieldNumber euiFieldNumber--withIcon"
              data-test-subj="interval_interval_field"
              min="1"
              name="period.interval"
              type="number"
              value="1"
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem"
  >
    <div
      class="euiFormRow euiFormRow--hasEmptyLabelSpace"
      id="period.unit-form-row-row"
    >
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <select
              class="euiSelect"
              data-test-subj="interval_unit_field"
              id="period.unit"
              name="period.unit"
            >
              <option
                selected=""
                value="MINUTES"
              >
                Minutes
              </option>
              <option
                value="HOURS"
              >
                Hours
              </option>
              <option
                value="DAYS"
              >
                Days
              </option>
            </select>
            <div
              class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.069 5.157L8.384 9.768a.546.546 0 01-.768 0L2.93 5.158a.552.552 0 00-.771 0 .53.53 0 000 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 000-.76.552.552 0 00-.771 0z"
                    fill-rule="non-zero"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
